<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 iPublishing Co., Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:esnavi="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey800"
              android:orientation="vertical"
              android:weightSum="3"
              tools:context=".fragments.MapNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="32">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription=""
            android:gravity="center_vertical|end"
            android:padding="4dp"
            android:src="@drawable/note_safety"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/safety_marker_legend"
            android:textColor="@color/grey300"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription=""
            android:gravity="center_vertical|end"
            android:padding="4dp"
            android:src="@drawable/note_danger"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/danger_marker_legend"
            android:textColor="@color/grey300"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <jp.co.ipublishing.esnavi.views.MarqueeView
            android:id="@+id/legend_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey800"
            android:gravity="bottom"
            android:textColor="@color/grey300"
            esnavi:marquee_background="@color/grey800"
            esnavi:marquee_repeatLimit="-1"
            esnavi:marquee_text="@string/evacuation_notice"
            esnavi:marquee_textColor="@color/grey300"
            esnavi:marquee_textMoveSpeed="3"
            esnavi:marquee_textSize="14sp"/>
    </LinearLayout>
</LinearLayout>
