<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 iPublishing Co., Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:esnavi="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="4">

    <LinearLayout
        android:id="@+id/alert_main_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/grey800"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="16">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/alert_message_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:paddingLeft="4dp"
                android:text="@string/no_alert_message_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/alert_message_body"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="2"
                android:paddingLeft="4dp"
                android:text="@string/no_alert_message_body"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alert_near_shelter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/teal700"
            android:orientation="vertical"
            android:padding="4dp"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:contentDescription=""
                android:padding="12dp"
                android:src="@drawable/shelter"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/show_near_shelter"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/grey800"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/alert_headline_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey300"
            />

        <jp.co.ipublishing.esnavi.views.MarqueeView
            android:id="@+id/alert_headline_body"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:singleLine="true"
            esnavi:marquee_background="@color/grey800"
            esnavi:marquee_repeatLimit="-1"
            esnavi:marquee_text="@string/evacuation_notice"
            esnavi:marquee_textColor="@color/grey300"
            esnavi:marquee_textMoveSpeed="3"
            esnavi:marquee_textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>